@@ -1,6 +1,8 @@
 2012-12-12  JJ Allaire <jj@rstudio.org>
 
-        * src/attributes.cpp: set svn:eol-style to native
+        * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
+        * src/attributes.cpp: set svn:eol-style to native; always generate 
+        new dynlib file for rebuild=TRUE
 
 2012-12-12 Romain Francois <romain@r-enthusiasts.com>
 
